--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="author" content="sho">
     <meta name="description" content="写真集の紹介用ページです。">
     <link rel="stylesheet" href="second.css">
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="favicon.ico">
   </head>
 
   <body>
     <header>
-      <img src="img/logo.svg" alt="">
+      <img src="logo.svg" alt="">
     </header>
 
     <main>
       <section id="mainvisual">
-        <img src="img/mainvisual.jpg" alt="でっかい写真">
+        <img src="mainvisual.jpg" alt="でっかい写真">
       </section>
 
       <section id="index">
@@ -35,7 +35,7 @@
       <section id="detail">
         <h3>DETAIL</h3>
         <div class="flexbox">
-        <img src="img/detail.jpg" alt="細かい写真">
+        <img src="detail.jpg" alt="細かい写真">
         <div class="contents">
           <h4>タイトルタイトルタイトル</h4>
           <hr>
